hphp/test/slow/inout/bad-call-4.php.expectf
Fatal error: You cannot use this syntax with `inout`. in %s/bad-call-4.php on line 6
